meegotouchhome (0.26.2~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 11 May 2011 16:02:17 +0300

meegotouchhome (0.26.1-1) unstable; urgency=low

  * Fixes: NB#246165 - Backup restore will corrupt the order of the applications in application grid

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 11 May 2011 16:01:50 +0300

meegotouchhome (0.26.0-1) unstable; urgency=low

  * Fixes: NB#246034 - Application icon is not visible after package installation if the .desktop file is installed before the icon
  * Fixes: NB#251152 - home seems to create a spinner when starting apps

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Wed, 11 May 2011 10:16:11 +0300

meegotouchhome (0.25.4-1) unstable; urgency=low

  * Fixes: NB#251366 - Paged views resist horizontal panning

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 09 May 2011 19:18:26 +0300

meegotouchhome (0.25.3-1) unstable; urgency=low

  * Fixes: NB#251126 - [TASK] Remove timeout of new taps not activating app launch while previous tap is not completed yet

 -- Janne Sakko <ext-janne.2.sakko@nokia.com>  Fri, 06 May 2011 15:26:00 +0300

meegotouchhome (0.25.2-1) unstable; urgency=low

  * Fixes: NB#253065 - Quick launch bar fixes

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 05 May 2011 16:56:12 +0300

meegotouchhome (0.25.1-1) unstable; urgency=low

  * Failboat release

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Thu, 05 May 2011 16:22:07 +0300

meegotouchhome (0.25.0-1) unstable; urgency=low

  * Fixes: NB#247718 - _MEEGOTOUCH_VISIBLE_IN_SWITCHER incorrectly set
  * Fixes: NB#237618 - Launcher does not notice all package state transitions
  * Fixes: NB#246034 - Application icon is not visible after package installation if the .desktop file is installed before the icon
 
 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Fri, 22 Apr 2011 15:48:05 +0300

meegotouchhome (0.24.5-1) unstable; urgency=low
